--- a/src/templates/results.html
+++ b/src/templates/results.html
@@ -1,24 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <!--
-      This is the page head - it contains info the browser uses to display the page
-      You won't see what's in the head in the page
-      Scroll down to the body element for the page content
-    -->
-
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="icon" href="https://glitch.com/favicon.ico" />
-
-    <!-- 
-      This is an HTML comment
-      You can write text in a comment and the content won't be visible in the page
-    -->
-
-    <title>Hello World!</title>
-
-    <!-- Meta tags for SEO and social sharing -->
+    <title>PetPicker/accounts</title>
     <link rel="canonical" href="https://glitch-hello-website.glitch.me/" />
     <meta
       name="description"
@@ -42,24 +28,35 @@
   </head>
   <body>
     <div class="wrapper">
-      <div class="content" role="main">
-        <h1 class="title">Welcome to PetPicker</h1>
-        <div class="instructions">
-          <h2></h2>
-          <label for="fname">Username:</label>
-          <input type="text" id="fname" name="fname" />
-          <label for="pwd">Password:</label>
-          <input type="password" id="pwd" name="pwd" />
-        </div>
-        <div>
-          <button type="button">Log In</button>
-          <button type="button">Create Account</button>
-        </div>
+      <div>
+        <span>Search Results Page</span>
+        <label for="fname">Search:</label>
+        <input type="text" id="fname" name="fname" />
       </div>
       <div>
-      <a href="account.html">Accounts temp link</a>
-      <a href="results.html">Results temp link</a>
-        
+        <span>Query: search goes here</span>
+        <button>Save Query</button>
+        <button onclick="window.location.href='index.html';">Logout</button>
+      </div>
+      <div>
+        <img src="Cat.jpg">
+        <img src="Cat.jpg">
+        <img src="Cat.jpg">
+      </div>
+      <div>
+        <img src="Cat.jpg">
+        <img src="Cat.jpg">
+        <img src="Cat.jpg">
+      </div>
+      <div>
+        <img src="Cat.jpg">
+        <img src="Cat.jpg">
+        <img src="Cat.jpg">
+      </div>
+      <div>
+        <button>
+          Adopt Pet
+        </button>
       </div>
     </div>
   </body>
