fixed link to css file and made login and sign up able to submit form

--- a/src/website/templates/account.html
+++ b/src/website/templates/account.html
@@ -23,8 +23,8 @@
       content="https://cdn.glitch.com/605e2a51-d45f-4d87-a285-9410ad350515%2Fhello-website-social.png?v=1616712748147"
     />
     <meta name="twitter:card" content="summary" />
-    <link rel="stylesheet" href="/style.css" />
-    <script src="/script.js" defer></script>
+    <link rel="stylesheet" href="/static/style.css" />
+    <!-- <script src="/script.js" defer></script> -->
   </head>
   <body>
     <div class="wrapper">
