--- a/src/website/templates/index.html
+++ b/src/website/templates/index.html
@@ -37,8 +37,8 @@
       content="https://cdn.glitch.com/605e2a51-d45f-4d87-a285-9410ad350515%2Fhello-website-social.png?v=1616712748147"
     />
     <meta name="twitter:card" content="summary" />
-    <link rel="stylesheet" href="/style.css" />
-    <script src="/script.js" defer></script>
+    <link rel="stylesheet" href="/static/style.css" />
+    <!-- <script src="/script.js" defer></script> -->
   </head>
   <body>
     <div class="wrapper">
@@ -65,17 +65,18 @@
           {% endfor %}
         {% endif %}
         {% endwith %}
+        <form action="/login" id="login" method="POST">
         <div class="instructions">
-          <h2></h2>
           <label for="fname">Username:</label>
           <input type="text" id="fname" name="fname" />
           <label for="pwd">Password:</label>
           <input type="password" id="pwd" name="pwd" />
         </div>
         <div>
-          <button type="submit">Log In</button>
-          <button type="submit">Create Account</button>
+          <button type="submit" name="authorize" value="Login">Log In</button>
+          <button type="submit" name="authorize" value="Register">Create Account</button>
         </div>
+        </form>
       </div>
       <div>
       <a href="account.html">Accounts temp link</a>
