--- a/src/website/templates/results.html
+++ b/src/website/templates/results.html
@@ -36,7 +36,7 @@
       <div>
         <span>Query: search goes here</span>
         <button>Save Query</button>
-        <button onclick="window.location.href='index.html';">Logout</button>
+        <button onclick=logout()>Logout</button>
       </div>
       <div>
         <img src="Cat.jpg">
