account page works, minor changes to html but they still need a lot more changes, also added some TODOs

--- a/src/templates/account.html
+++ b/src/templates/account.html
@@ -31,11 +31,11 @@
       <div class="content" role="main">
         <h1 class="title">Accounts page</h1>
         <div>
-          <form action="/form/submit" method="GET">
+          <form action="/search" method="GET">
   <input type="text" name="text" class="search" placeholder="Search here!">
   <input type="submit" name="submit" class="submit" value="Search">
 </form>
-          <form><button>Logout</button></form>
+          <form action="/logout"><button>Logout</button></form>
         </div>
         <div>
           <p>
