--- a/src/templates/results.html
+++ b/src/templates/results.html
@@ -30,7 +30,7 @@
     <div class="wrapper">
       <div>
         <span>Search Results Page</span>
-        <form action="/form/submit" method="GET">
+        <form action="/search" method="GET">
   <input type="text" name="text" class="search" placeholder="Search here!">
   <input type="submit" name="submit" class="submit" value="Search">
 </form>
