--- a/src/templates/results.html
+++ b/src/templates/results.html
@@ -41,19 +41,13 @@
         <form><button onclick="window.location.href='index.html';">Logout</button></form>
       </div>
       <div>
-        <img src="Cat.jpg">
-        <img src="Cat.jpg">
-        <img src="Cat.jpg">
-      </div>
-      <div>
-        <img src="Cat.jpg">
-        <img src="Cat.jpg">
-        <img src="Cat.jpg">
-      </div>
-      <div>
-        <img src="Cat.jpg">
-        <img src="Cat.jpg">
-        <img src="Cat.jpg">
+          images = []
+          {% for i in images%}
+            {{print(str(images[i]}}
+          {% endfor %}
+          {% for i in range 10%}
+            {{<p>i</p>}}
+          {% endfor %}
       </div>
       <div>
         <button>
